// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 312,
  "sha256": "8a9613e4a8fba580938973ed9f6f1dc963ad51f42c5385010514b029b1e0e337",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "9b6352449934cdcd7242edc0d3b66ae93e8213a58039884e8bbf2e8e64fad268",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "2aa45e457df30ba5dc5210e4c33ab7c67358e24bda39afc2132e651805f9afa3",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 360,
  "sha256": "4478a283f123978e8a979a11aa9bf64d0f9d752f70ce4eb03145aff74855ce69",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 360,
  "sha256": "46132dbea369c1f403261449b686d76b50925a96ea06e322264d9a4f91b5c8d6",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 377,
  "sha256": "81eb04e44877ace44144ff325adc924185c356bafab4cbb8af1d147652847493",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 466,
  "sha256": "71ed37f46c3e9246d4181fe091e6a7f596efcda8751b5b942c1d95c0e1f2b721",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 732,
  "sha256": "9bf41ae2355385a9186986bce0512203c7f4c63cd463b8fc4cafe8f28024ced5",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 736,
  "sha256": "0d9a635525d2ebadd65056b11ccf9f6b9975ba134623c0927ccd0c3efe5dccb2",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 775,
  "sha256": "ac8be0841da961ca063f7585484f276f40de8eedd03fc3c1b5356e126a7ee584",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 827,
  "sha256": "766baa676467410ce28218c1e5454392431cfa25ba9057a6e69b405ace1d7043",
}
`;
